[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/tilesets/simple.tres" type="TileSet" id=1]
[ext_resource path="res://scripts/z_area.gd" type="Script" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/2PCam.gd" type="Script" id=4]
[ext_resource path="res://scripts/GUI.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/hp_back.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/hp_front.png" type="Texture" id=7]

[node name="2DScene" type="Node"]

[node name="Node2D" type="Node2D" parent="."]

[node name="Floor" type="TileMap" parent="Node2D"]
position = Vector2( -1, -1 )
scale = Vector2( 0.998574, 1 )
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 256, 128 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( -196604, 1, 0, -196603, 1, 0, -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 262143, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0 )

[node name="Wall1" type="TileMap" parent="Node2D"]
z_index = 1
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 256, 128 )
cell_tile_origin = 1
cell_y_sort = true
format = 1
tile_data = PoolIntArray( -524293, 5, 0, -524292, 5, 0, -524291, 5, 0, -524290, 5, 0, -524289, 5, 0, -589824, 5, 0, -589823, 5, 0, -589822, 5, 0, -458757, 5, 0, -393221, 5, 0, -327685, 5, 0, -393216, 5, 0, -393215, 5, 0, -262149, 5, 0, -327680, 5, 0, -327679, 5, 0, -196613, 5, 0, -131077, 5, 0, -65541, 5, 0, -5, 5, 0, 65531, 5, 0, 131076, 5, 0 )

[node name="z_1" type="Area2D" parent="Node2D/Wall1" groups=[
"ZLevels",
]]
editor/display_folded = true
z_index = 1
z_as_relative = false
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/Wall1/z_1"]
polygon = PoolVector2Array( 127.379, -64.362, 255.379, -0.362, 327.379, -108.362, 199.379, -172.362 )

[node name="StaticBody2D" type="StaticBody2D" parent="Node2D/Wall1"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/Wall1/StaticBody2D"]
polygon = PoolVector2Array( -768.621, -384.362, -640.621, -320.362, 511.379, -896.362, 1407.38, -448.362, 1535.38, -512.362, 1535.38, -384.362, 1407.38, -320.362, 511.379, -768.362, -640.621, -192.362, -768.621, -256.362 )

[node name="Wall0" type="TileMap" parent="Node2D"]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 256, 128 )
cell_tile_origin = 1
cell_y_sort = true
format = 1
tile_data = PoolIntArray( -393219, 6, 0, -393218, 6, 0, -393217, 6, 0, -458752, 6, 0, -458751, 6, 0, -458750, 6, 0, -458749, 6, 0, -327683, 6, 0, -327682, 6, 0, -327681, 6, 0, -393216, 6, 0, -393215, 6, 0, -393214, 6, 0, -393213, 6, 0, -262147, 6, 0, -262146, 6, 0, -262145, 6, 0, -327680, 6, 0, -327679, 3, 0, -327678, 6, 0, -327677, 6, 0, -196611, 6, 0, -196610, 6, 0, -196609, 6, 0, -262144, 6, 0, -262143, 6, 0, -262142, 6, 0, -262141, 6, 0, -131075, 6, 0, -131074, 6, 0, -131073, 6, 0, -196608, 6, 0, -196607, 6, 0, -196606, 6, 0, -196605, 6, 0, -65539, 6, 0, -65538, 6, 0, -65537, 6, 0, -131072, 4, 0, -3, 6, 0, -2, 6, 0, -1, 6, 0, 65533, 6, 0, 65534, 6, 0, 65535, 6, 0, 2, 6, 0, 131069, 6, 0, 131070, 6, 0, 131071, 6, 0, 65541, 0, 0, 196613, 6, 0 )

[node name="Sun" parent="Node2D/Wall0" instance=ExtResource( 3 )]
position = Vector2( 79.379, 47.638 )

[node name="Moon" parent="Node2D/Wall0" instance=ExtResource( 3 )]
position = Vector2( -144.621, 163.638 )

[node name="z_0" type="Area2D" parent="Node2D/Wall0" groups=[
"ZLevels",
]]
editor/display_folded = true
z_as_relative = false
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/Wall0/z_0"]
polygon = PoolVector2Array( 103.379, -52.3625, 255.379, 23.6375, 279.379, 11.6375, 295.379, 19.6375, 255.379, 39.6375, 87.3793, -44.3625 )

[node name="StaticBody2D" type="StaticBody2D" parent="Node2D/Wall0"]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Node2D/Wall0/StaticBody2D"]
polygon = PoolVector2Array( -256.621, 127.638, 127.379, -64.362, 255.379, -256.362, -256.621, -0.362, -384.621, -64.362, -384.621, 63.638 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Node2D/Wall0/StaticBody2D"]
polygon = PoolVector2Array( 895.379, -64.362, 767.379, -0.362, 383.379, -192.362, 255.379, -0.362, 383.379, -64.362, 767.379, 127.638, 895.379, 63.638 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Node2D/Wall0/StaticBody2D"]
polygon = PoolVector2Array( 127.379, 191.638, 255.379, 255.638, 383.379, 191.638, 383.379, 183.638, 255.379, 247.638, 127.379, 183.638 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Node2D/Wall0/StaticBody2D"]
polygon = PoolVector2Array( 127.379, 191.638, 255.379, 127.638, 383.379, 191.638, 407.379, 179.638, 263.379, 107.638, 247.379, 107.638, 103.379, 179.638 )

[node name="Camera2D" type="Camera2D" parent="Node2D"]
current = true
script = ExtResource( 4 )

[node name="Node2D_UI" type="Node2D" parent="."]
z_index = 99

[node name="GUI" type="Control" parent="Node2D_UI"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="Node2D_UI/GUI"]

[node name="hbar_test" type="HBoxContainer" parent="Node2D_UI/GUI"]
margin_left = 50.0
margin_top = 50.0
margin_right = 350.0
margin_bottom = 100.0

[node name="TextureProgress" type="TextureProgress" parent="Node2D_UI/GUI/hbar_test"]
margin_right = 300.0
margin_bottom = 50.0
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
[connection signal="area_entered" from="Node2D/Wall1/z_1" to="Node2D/Wall1/z_1" method="_on_z_area_entered"]
[connection signal="health_changed" from="Node2D/Wall0/Sun" to="Node2D_UI/GUI" method="sun_health_changed"]
[connection signal="player_initialised" from="Node2D/Wall0/Sun" to="Node2D_UI/GUI" method="set_player"]
[connection signal="player_initialised" from="Node2D/Wall0/Sun" to="Node2D/Camera2D" method="set_player"]
[connection signal="player_initialised" from="Node2D/Wall0/Moon" to="Node2D_UI/GUI" method="set_player"]
[connection signal="player_initialised" from="Node2D/Wall0/Moon" to="Node2D/Camera2D" method="set_player"]
[connection signal="area_entered" from="Node2D/Wall0/z_0" to="Node2D/Wall0/z_0" method="_on_z_area_entered"]
[connection signal="camera_initialised" from="Node2D/Camera2D" to="Node2D_UI/GUI" method="set_camera"]
